--- a/style.css
+++ b/style.css
@@ -1,8 +1,26 @@
+@charset "UTF-8";
 /*!
 Theme Name: MyTheme
 Author: Masahiro Harada
 Description: My Theme
 */
+.header--logo {
+  display: block;
+  float: left;
+  background-color: gray;
+}
+
+.header--container {
+  display: block;
+  float: right;
+}
+.header--container ul {
+  display: flex;
+}
+.header--container ul li {
+  margin-right: 32px;
+}
+
 body h1 {
   color: red;
 }
