--- a/reset.css
+++ b/reset.css
@@ -1,46 +1,57 @@
 /* A Modern CSS Reset */
-/* *,*::before,*::after{
-    box-sizing:border-box
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
-ul[class],ol[class]{
-    padding:0
+ul[class], ol[class] {
+  padding: 0;
 }
 
-body,h1,h2,h3,h4,p,ul[class],ol[class],figure,blockquote,dl,dd{
-    margin:0
+body, h1, h2, h3, h4, p, ul[class], ol[class], figure, blockquote, dl, dd {
+  margin: 0;
 }
 
-body{
-    min-height:100vh;
-    scroll-behavior:smooth;
-    text-rendering:optimizeSpeed;
-    line-height:1.5
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
 }
 
-ul[class],ol[class]{
-    list-style:none
+ul[class], ol[class] {
+  list-style: none;
 }
 
-a:not([class]){
-    text-decoration-skip-ink:auto
+a:not([class]) {
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
-img{
-    max-width:100%;
-    display:block
+img {
+  max-width: 100%;
+  display: block;
 }
 
-article>*+*{
-    margin-top:1em
+article > * + * {
+  margin-top: 1em;
 }
 
-input,button,textarea,select{
-    font:inherit
+input, button, textarea, select {
+  font: inherit;
 }
 
-img:not([alt]){
-    filter:blur(10px)
+img:not([alt]) {
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
 }
 
-@media(prefers-reduced-motion:reduce){*{animation-duration:.01ms !important;animation-iteration-count:1 !important;transition-duration:.01ms !important;scroll-behavior:auto !important}}
+@media (prefers-reduced-motion: reduce) {
+  * {
+    -webkit-animation-duration: 0.01ms !important;
+            animation-duration: 0.01ms !important;
+    -webkit-animation-iteration-count: 1 !important;
+            animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
