--- a/style.css
+++ b/style.css
@@ -3,42 +3,169 @@ Theme Name: MyTheme
 Author: Masahiro Harada
 Description: My Theme
 */
-main {
-  width: 1080px;
-  margin: 0 auto;
+/*@charset "utf-8";
+
+/*
+*Foundation
+*/
+/* A Modern CSS Reset */
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
-.key-container {
-  display: flex;
-  margin: 0 -16px;
-}
-
-.main-container {
-  display: flex;
-}
-
-.comedian {
-  width: 33%;
-  padding: 0 16px;
-}
-
-img {
-  width: 100%;
-}
-
-body {
-  margin: 0;
+ul[class], ol[class] {
   padding: 0;
 }
 
-.post {
-  display: flex;
+body, h1, h2, h3, h4, p, ul[class], ol[class], figure, blockquote, dl, dd {
+  margin: 0;
+}
+
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+ul[class], ol[class] {
+  list-style: none;
+}
+
+a:not([class]) {
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+article > * + * {
+  margin-top: 1em;
+}
+
+input, button, textarea, select {
+  font: inherit;
+}
+
+img:not([alt]) {
+  -webkit-filter: blur(10px);
+          filter: blur(10px);
+}
+
+@media (prefers-reduced-motion: reduce) {
+  * {
+    -webkit-animation-duration: 0.01ms !important;
+            animation-duration: 0.01ms !important;
+    -webkit-animation-iteration-count: 1 !important;
+            animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+html {
+  font-size: 62.5%;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 1em 0;
+}
+
+h1 {
+  font-size: 3.2rem;
+}
+
+h2 {
+  font-size: 2.4rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+h4 {
+  font-size: 1.8rem;
+}
+
+p {
+  font-size: 1.6rem;
+  line-height: 2em;
+}
+
+main {
+  margin: 0 auto;
+}
+
+/*
+*Layout
+*/
+/*
+*Component
+*/
+.c-card__container {
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.12);
+}
+
+.c-card__image {
+  width: 100%;
+  padding-top: 66.666%;
+  background-position: center;
+  background-size: cover;
+}
+
+.c-card__text {
+  padding: 0 16px;
+  height: 40%;
+}
+
+/*
+*Project
+*/
+/*l c p u*/
+.p-single__backImage {
+  height: 320px;
+  background-color: #BBBBBB;
+  margin-bottom: -240px;
+}
+
+.p-single__main {
+  width: 880px;
+  margin: 0 auto;
+}
+
+.p-single__image {
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  padding-top: 66.66666%;
   margin-bottom: 32px;
 }
-.post .column-img {
+
+.p-single__contents {
+  display: flex;
+}
+
+.p-single__document {
+  width: 70%;
+}
+
+.p-single__sidebar {
   width: 30%;
 }
 
-.twitter-share-button {
-  display: block;
+.p-rerationpost__container {
+  margin: -16px;
+  display: flex;
 }
+
+.p-rerationpost__card {
+  margin: 0 16px;
+  padding-bottom: 24px;
+  width: 25%;
+}
+
+/*
+*Utility
+*/
