--- a/src/sass/Foundation/_base.scss
+++ b/src/sass/Foundation/_base.scss
@@ -33,3 +33,13 @@ p{
 main{
    margin: 0 auto;
 }
+
+a{
+    text-decoration: none;
+}
+a:link{
+    color: #000000;
+}
+a:visited{
+    color: #000000;
+}
