--- a/src/sass/Layout/_header.scss
+++ b/src/sass/Layout/_header.scss
@@ -1,22 +1,40 @@
-
-/*
-.header--logo{
-    display: block;
-    float: left;
-    background-color: gray;
+.l-header{
+    display: flex;
+    justify-content: space-between;
+    background-color: #b1b1b1;
+    font-size: 1.4rem;
+    align-items: center;
+    text-decoration: none;
 }
 
-.header--container{
-    
-    display: block;
-    float: right;
+.l-header__image{
+    margin-left: 32px;
+    font-size: 24px;
+    font-weight: 600;
+}
 
-    ul{
+.l-header__container{
+    display: flex;
+}
+
+.menu-item{
+
+    a{
         display: flex;
-
-        li{
-            margin-right:32px;
-
-        }
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        height: 80px;
+        width: 120px;
     }
-}*/
+    
+    a:link{
+        color: #272727;
+    }
+    
+    a:visited{
+        color: #8f5858;
+    }
+}
+
+
